--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Satoshi-Variable';
-    src:url('Satoshi-Variable.ttf') format('truetype');
+    src:url('../fonts/Satoshi-Variable.ttf') format('truetype');
     font-weight: 300 900;
     font-display: swap;
     font-style: normal;
